update robot state API
